Added Rune audio to scene

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ Assets/Plugins/RainbowAssets/!Core/Source/RainbowCore.src.unitypackage.meta
 .idea/.idea.Swipecaster/.idea/contentModel.xml
 .idea/.idea.Swipecaster/.idea/workspace.xml
 UserSettings/EditorUserSettings.asset
+.idea/.idea.Swipecaster/.idea/workspace.xml
+.idea/.idea.Swipecaster/.idea/contentModel.xml
